--- a/scss/base/_global-selectors.scss
+++ b/scss/base/_global-selectors.scss
@@ -260,21 +260,22 @@
 	}
 }
 
+.background {
+	align-items: center;
+	background-color: var(--background_dark-clr);
+	display: flex;
+	flex-direction: column;
+	margin: 0 auto;
+	width: 100%;
+}
+
 .footer {
 	align-items: center;
 	background-color: var(--background_dark-clr);
 	display: flex;
 	height: 5rem;
 	justify-content: center;
-	width: calc(100% + 4rem);
-
-	@include mq(768px) {
-		bottom: -5rem;
-		left: 0;
-		margin: 0 -5rem;
-		position: absolute;
-		width: calc(100% + 10rem);
-	}
+	width: 100%;
 
 	&__text {
 		font-size: 1.6rem;
