--- a/scss/sections/portfolio/_green-box.scss
+++ b/scss/sections/portfolio/_green-box.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   height: 30rem;
   justify-content: center;
-  margin: 0;
+  margin: 0 0 3rem 0;
   padding: 1.5rem;
   transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
   width: 28rem;
@@ -19,6 +19,7 @@
 
   @include mq(768px) {
     height: 32.5rem;
+    margin: 0;
     padding: 1.5rem;
     width: 32.5rem;
   }
@@ -41,17 +42,17 @@
     }
   }
 
-  &:not(:last-child) {
-    margin-bottom: 3rem;
+  // &:not(:last-child) {
+  //   margin-bottom: 3rem;
 
-    @include mq(576px) {
-      margin-bottom: 5rem;
-    }
+  //   @include mq(576px) {
+  //     margin-bottom: 5rem;
+  //   }
 
-    @include mq(768px) {
-      margin-bottom: 0;
-    }
-  }
+  //   @include mq(768px) {
+  //     margin-bottom: 0;
+  //   }
+  // }
 
   &__link {
     align-items: center;
