--- a/css/main.css
+++ b/css/main.css
@@ -703,7 +703,7 @@ body {
           top: 2rem; } }
 
 .menu {
-  height: 100%;
+  height: 100vh;
   position: fixed;
   transition: all 0.3s ease-in-out;
   visibility: hidden;
