--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -75,6 +75,11 @@
 	visibility: hidden;
 	width: 100%;
 
+	@include mqh(320px) {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+	}
+
 	@include mq(768px) {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
@@ -88,6 +93,10 @@
 		align-items: center;
 		display: flex;
 		height: 50vh;
+
+		@include mqh(320px) {
+			height: 100vh;
+		}
 
 		@include mq(768px) {
 			height: 100vh;
@@ -125,9 +134,13 @@
 		transform: translateY(100%);
 		transition: transform 0.3s ease-in-out;
 
-		@include mq(768px) {
-			transform: translateY(-100%);
+		@include mqh(320px) {
 			height: 100vh;
+		}
+
+		@include mq(768px) {
+			height: 100vh;
+			transform: translateY(-100%);
 		}
 
 		@include mq(1200px) {
@@ -148,6 +161,10 @@
 			transform: translateX(-100%);
 			transition: transform 0.3s ease-in-out;
 			transition-delay: 300ms;
+
+			@include mqh(320px) {
+				transform: translateX(100%);
+			}
 
 			@include mq(768px) {
 				transform: translateX(100%);
