--- a/css/main.css
+++ b/css/main.css
@@ -886,7 +886,7 @@ body {
       display: block; }
       @media screen and (max-height: 320px) {
         .header__my-name--green {
-          display: inline; } }
+          display: inline-block; } }
       @media screen and (min-width: 768px) {
         .header__my-name--green {
           display: inline-block; } }
@@ -997,6 +997,15 @@ body {
   height: 100vh;
   justify-content: center;
   width: 100%; }
+  @media screen and (max-height: 320px) {
+    .header-aboutme {
+      align-content: center;
+      align-items: start;
+      display: grid;
+      grid-template-columns: min-content 1fr;
+      grid-template-rows: repeat(3, min-content);
+      grid-gap: 1rem 5rem;
+      padding: 5rem; } }
   @media screen and (min-width: 768px) {
     .header-aboutme {
       align-content: center;
@@ -1017,6 +1026,12 @@ body {
     font-weight: bold;
     margin: 0;
     text-transform: uppercase; }
+    @media screen and (max-height: 320px) {
+      .header-aboutme__title {
+        font-size: 4rem;
+        grid-column: 1 / -1;
+        grid-row: 1;
+        width: 100%; } }
     @media screen and (min-width: 576px) {
       .header-aboutme__title {
         font-size: 7rem; } }
@@ -1030,16 +1045,23 @@ body {
     font-size: 1.8rem;
     font-weight: normal;
     margin: 1rem 0 0 0; }
+    @media screen and (max-height: 320px) {
+      .header-aboutme__subtitle {
+        font-size: 1.8rem;
+        grid-column: 1 / -1;
+        grid-row: 2;
+        margin: 0;
+        width: 100%; } }
     @media screen and (min-width: 576px) {
       .header-aboutme__subtitle {
         font-size: 2.4rem; } }
     @media screen and (min-width: 768px) {
       .header-aboutme__subtitle {
         font-size: 3.2rem;
-        width: 100%;
         grid-column: 1 / -1;
         grid-row: 2;
-        margin: 0; } }
+        margin: 0;
+        width: 100%; } }
   .header-aboutme__my-photo {
     border: 0.5rem solid var(--secondary-clr);
     border-radius: 50%;
@@ -1072,6 +1094,15 @@ body {
     text-align: center;
     width: 24rem;
     z-index: 1; }
+    @media screen and (max-height: 320px) {
+      .header-aboutme__description {
+        font-size: 1.6rem;
+        grid-column: 2 / 3;
+        grid-row: 3;
+        margin: 2rem 0 0 0;
+        max-width: 100%;
+        text-align: left;
+        width: 100%; } }
     @media screen and (min-width: 576px) {
       .header-aboutme__description {
         font-size: 2.6rem;
@@ -1084,8 +1115,8 @@ body {
         grid-row: 3;
         margin: 2rem 0 0 0;
         max-width: 100%;
-        width: 100%;
-        text-align: left; } }
+        text-align: left;
+        width: 100%; } }
 
 @keyframes arrowMove {
   0% {
