--- a/scss/base/_body.scss
+++ b/scss/base/_body.scss
@@ -56,7 +56,7 @@ body {
 
 .aboutme-container {
 	align-items: center;
-	background-color: var(--background-clr);
+	// background-color: var(--background-clr);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
