--- a/scss/sections/aboutme/_header.scss
+++ b/scss/sections/aboutme/_header.scss
@@ -1,6 +1,6 @@
 .header-aboutme {
 	align-items: center;
-	background-color: var(--background-clr);
+	// background-color: var(--background-clr);
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
