--- a/scss/base/_body.scss
+++ b/scss/base/_body.scss
@@ -4,7 +4,7 @@ html {
 
 body {
 	background-attachment: fixed;
-	background-image: url('../../img/background.jpg');
+	background-image: url('../img/background.jpg');
 	background-size: cover;
 	color: var(--primary-clr);
 	font-family: var(--font);
