add .webp format file

--- a/css/main.css
+++ b/css/main.css
@@ -361,6 +361,7 @@ html {
 body {
 	background-attachment: fixed;
 	background-image: url('../img/background.jpg');
+	background-image: url('../img/background.webp');
 	background-size: cover;
 	color: var(--primary-clr);
 	font-family: var(--font);
